<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.pablomellado.pandealfacar.order.ConfirmOrderFragment"
    android:fillViewport="true"
    android:background="@color/registerBackground">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/registerBackground">

    <android.support.v7.widget.CardView
        android:id="@+id/deliveryDetailsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_when"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/deliveryDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Mañana LUNES 21 septiembre de 2017\nen horario de mañana" />

            <Button
                android:id="@+id/changeDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/button_change_day"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_where"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/deliveryAdressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Calle Aguas, 27 - 1ºA 18011 Granada\nContacto: Pepe Rodríguez" />

            <Button
                android:id="@+id/changeAddressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/button_change_address"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cartProductsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_products_ordered" />

            <TableLayout
                android:id="@+id/productsTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:stretchColumns="1">
            </TableLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/grey_400" />

            <TextView
                android:id="@+id/totalOrderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:text="Total a pagar: 7,00 €" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/notesCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_notes" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>