<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_address_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textCapWords|textAutoComplete|textPersonName"
             />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_contact_person"
        app:layout_constraintRight_toRightOf="@+id/layout_address_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_address_name" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_address_line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <EditText
            android:id="@+id/address_line1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textCapWords|textAutoComplete|textUri|textPostalAddress"
             />
    </android.support.design.widget.TextInputLayout>


    <EditText
        android:id="@+id/address_line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textCapWords|textAutoComplete|textUri|textPostalAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_address_line1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_address_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_line2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <EditText
            android:id="@+id/address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/city"
            android:inputType="textCapWords|textAutoComplete"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_address_postal_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_address_city"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <EditText
            android:id="@+id/address_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>