<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp">
    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDeliverDateCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/delivery_date_caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Sábado 12 de agosto de 2017"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliverDateCaption"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/tvAddressCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/address"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryDate"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="José Martínez"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressCaption"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/tvLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="Línea 1 de dirección"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvContact"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/tvLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLine1"
            tools:text="Línea 2 de dirección"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/tvPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="6dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLine2"
            tools:text="18012"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="7dp"
            android:text="TextView"
            app:layout_constraintLeft_toRightOf="@+id/tvPostalCode"
            app:layout_constraintTop_toBottomOf="@+id/tvLine2"
            tools:text="Granada"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvProductsCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/delivery_products_ordered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPostalCode"
            android:layout_marginStart="16dp" />

        <TableLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvProductsCaption"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tlProductsTable"
            android:stretchColumns="1"
            android:layout_marginStart="32dp">
        </TableLayout>
        <View
            android:id="@+id/vThinLine"
            android:layout_width="352dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_400"
            app:layout_constraintTop_toBottomOf="@+id/tlProductsTable"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tvTotalOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/vThinLine"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text=""
            tools:text="Total a pagar: 7,00 €"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>